--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</text-column>
   </div>
   <div class="image-column">
-    <img src="Images/homepic.JPG" alt="My graduation picture" />
+    <img src="homepic.JPG" alt="My graduation picture" />
   </div>
 </main>
   <footer>
