--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <header>
     <h1>Cameron Shaw Media</h1>
     <nav>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html" class="active">About</a>
 		<a href="broadcast.html">Broadcast</a>
       <a href="projects.html">Video Projects</a>
