--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
   <header>
     <h1>Cameron Shaw Media</h1>
     <nav>
-      <a href="home.html" >Home</a>
+      <a href="index.html" >Home</a>
       <a href="about.html">About</a>
 		<a href="broadcast.html">Broadcast</a>
       <a href="projects.html" class="active">Video Projects</a>
