--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 	</text-column>
   </div>
   <div class="image-column">
-    <img src="aboutpic.jpg" alt="Me going through audio check pregame" />
+    <img src="aboutpic.JPG" alt="Me going through audio check pregame" />
   </div>
 </main>
  <footer>
